新增伪类选择器before after使用

--- a/CSS/09-伪元素.md
+++ b/CSS/09-伪元素.md
@@ -1,4 +1,49 @@
 ### 伪元素
 
+#### :before :after实现上下左右边框
+
+```css
+.model:before,
+.model:after{
+    position:absolute;
+    width: 1.1rem;
+    height: 1.1rem;
+    content: "";
+    border-top: 2px solid #02a6b5;
+    top: 0;
+}
+.model:before,.divfoot:before{
+    border-left: 2px solid #02a6b5;
+    left: 0;
+}
+.model:after,.divfoot:after{
+    border-right: 2px solid #02a6b5;
+    right: 0;
+}
+.divfoot{
+    position:absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+}
+.divfoot:before,.divfoot:after{
+    position: absolute;
+    width: 1.1rem;
+    height: 1.1rem;
+    content: "";
+    border-bottom: 2px solid #02a6b5;
+    bottom: 0px;
+}
+```
+
+```html
+<div class="model">
+    <div class="divfoot">
+    </div>
+</div>
+```
+
+
+
 ### 伪元素一个冒号和两个冒号的区别
 
