--- a/JavaScript/23-时间.md
+++ b/JavaScript/23-时间.md
@@ -1,5 +1,6 @@
 ```js
 //参数：new Date(时间戳) 格式
+//new Date(时间戳) 将时间戳转化为new Date()的日期
 function formatDate(date, fmt) {
    if (/(y+)/.test(fmt)) {
 	    fmt = fmt.replace(RegExp.$1, (date.getFullYear() + "").substr(4 - RegExp.$1.length));
