--- a/CSS/09-伪类和伪元素.md
+++ b/CSS/09-伪类和伪元素.md
@@ -1,4 +1,19 @@
-### 伪元素
+### 伪类选择器
+
+:link  :visited  :hover  :active
+
+:first-child   :last-child   :nth-child(n) ... 
+
+### 伪元素选择器
+
+css伪元素用于向某些选择器设置特殊效果
+
+* :after 在元素内部的最前添加内容
+* :befter 在元素之后添加内容
+* :first-letter 向文本的第一个添加特殊样式
+* :first-line 向文本的首行添加特殊样式
+
+伪元素由`::`开头，是为了区分伪元素和伪类。考虑到兼容性，css2中已存在的伪元素仍然可以使用一个冒号`:`的语法，但是css3中新增的伪元素必须使用两个`::`
 
 #### :before :after实现上下左右边框
 
