--- a/JavaScript/21-事件的冒泡和捕获.md
+++ b/JavaScript/21-事件的冒泡和捕获.md
@@ -38,7 +38,7 @@
 
 element.addEventListener(event,function,useCapture)
 
-event：事件      function：回调函数   useCapture：默认为false，表示在事件冒泡阶段调用事件处理函数；true，表示在事件捕获阶段调用处理函数
+event：事件      function：回调函数   useCapture：默认为false，表示在事件**冒泡阶段**调用事件处理函数；true，表示在事件捕获阶段调用处理函数
 
 `preventDefault()` 阻止事件默认行为
 `stopPropagation()` W3C标准的阻止冒泡
