--- a/Vue/03-1-组件化开发.md
+++ b/Vue/03-1-组件化开发.md
@@ -37,7 +37,7 @@ var box=new Vue({
 
 **为什么data必须是一个函数？**
 
-Vue让每个组件的data都返回一个新的对象（地址不一样），**为了防止多次调用组件，组价之间相互影响**（修改一个组件中的数据的值，其他组件中的值也会受到影响）
+Vue让每个组件的data都返回一个新的对象（地址不一样），**为了防止多次调用组件，组件之间相互影响**（修改一个组件中的数据的值，其他组件中的值也会受到影响）
 
 ```js
 const cpn={
