--- a/Vue/04-1-前端工程化.md
+++ b/Vue/04-1-前端工程化.md
@@ -6,6 +6,10 @@
 
 把每一个js文件当作是一个模块，使用模块化规范将其中的变量等导出，另一些js文件需要引用某个js文件里的变量的话，将其导入
 
+### 模块化好处
+
+减少全局变量 避免变量名和函数命名冲突 提高代码的复用性和维护性
+
 ### 解决方案
 
 * 使用匿名函数（函数有自己的作用域），解决了命名冲突的问题，但是却出现了代码不能复用的问题，所以可以将变量封装为一个对象作为函数的返回值，再定义一个全局变量接收，之后再别的js文件中调用该全局变量的属性即可
