--- a/前端面试题/03-编程题.md
+++ b/前端面试题/03-编程题.md
@@ -3,7 +3,7 @@
 * 双重for循环
 
   ```js
-  let arr=[1,-1,2,8,9,11,2];
+  let arr=[1,-1,1,2,8,9,11,2];
   function unique(arr){
       let len=arr.length;
       for(let i=0;i<len;i++){
@@ -62,22 +62,6 @@
   });//1,2,3,3,5,7,9,11
   ```
 
-* 冒泡排序
-
-  ```js
-  let arr=[[6,1,2,4,3,5]];
-  function bubbleSort(arr){
-      for(let i=0;i<arr.length-1;i++){
-          for(let j=0;j<arr.length-1-i;j++){
-              if(arr[i]>arr[j+1]){
-                  var temp=arr[i];
-                  arr[i]=arr[j+1];
-                  arr[j+1]=temp;
-              }
-          }
-      }
-  }
-  ```
 
 ### 斐波那契
 
@@ -98,9 +82,9 @@ var arr=[2,1,5,3,10,2,9,8];
 function bubblingSort(arr){
     let len=arr.length;
     //排序的趟数
-    for(let i=0;i<len;i++){
+    for(let i=1;i<len;i++){
         //比较的次数
-        for(let j=1;j<len-i;j++){
+        for(let j=1;j<=len-i;j++){
             if(arr[j-1]>arr[j]){
                 var temp=arr[j];
                 arr[j]=arr[j-1];
@@ -148,6 +132,15 @@ console.log(arr)
 ```
 
 ### 数组扁平化
+
+```js
+var arr=[11,[22,33],[44,55],66]
+arr.toString() //1,2,3
+arr.valueOf()  //[1,2,3]
+var flatArr=arr.toString().split(",") //["11", "22", "33", "44", "55", "66"]
+```
+
+
 
 
 
