--- a/网络/04-浏览器的缓存机制.md
+++ b/网络/04-浏览器的缓存机制.md
@@ -1,4 +1,4 @@
-​	参考：https://www.jianshu.com/p/54cc04190252
+	参考：https://www.jianshu.com/p/54cc04190252
 
 ### 为什么要使用缓存机制
 
@@ -22,7 +22,7 @@
 <img src="C:\Users\zhuwanning\AppData\Roaming\Typora\typora-user-images\image-20210304151049908.png" alt="image-20210304151049908" style="zoom:80%;" />
 
 * 浏览器每次发起请求，都会先在浏览器缓存中查找该请求的的结果以及缓存标识
-* 浏览器每次拿到返回的请求结果都会将结果和缓存表示存入浏览器缓存中
+* 浏览器每次拿到返回的请求结果都会将结果和缓存标识存入浏览器缓存中
 
 ### 强缓存
 
