--- a/CSS/02-弹性盒子.md
+++ b/CSS/02-弹性盒子.md
@@ -81,3 +81,14 @@
 - `stretch`（默认值）：轴线占满整个交叉轴
 
 ![img](http://www.ruanyifeng.com/blogimg/asset/2015/bg2015071012.png)
+
+### flex:1=flex:1 1 0%
+
+flex是flex-grow，flex-shrink，flex-basis的结合
+
+flex-grow:定义flex元素的放大比例
+
+flex-shrink:定义flex元素仅在宽度之和大于容器的时候才发生收缩
+
+flex-basis:决定flex元素在主轴方向上的初识大小
+
