--- a/前端面试题/05-深浅拷贝.md
+++ b/前端面试题/05-深浅拷贝.md
@@ -30,8 +30,8 @@ function shallObject(obj){
 }
 obj1.name='李四'
 obj1.language[1]=[1,'二']
-console.log(obj1)
-console.log(obj2)
+console.log(obj1)//{name:'张三',age:19,language:['二',[2,3],[4,5]]}
+console.log(obj2)//{name:'张三',age:19,language:['二',[2,3],[4,5]]}
 ```
 
 ### 深拷贝的实现
